<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Connect</string>
    <string name="title_aussteller">Aussteller</string>
    <string name="title_impulsvortraege">Impulsvortäge</string>
    <string name="title_messespecials">Messespecials</string>
    <string name="title_lageplan">Lageplan</string>
    <string name="title_favoriten">Favoriten</string>
    <string name="title_suche">Suche</string>
    <string name="title_info">Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="date_connect">Dienstag, 17. November 2015</string>
    <string name="time_connect">9:00-15:00 Uhr</string>
    <string name="place_connect">Alpen-Adria-Universität Klagenfurt</string>
    <string name="www_connect">www.aau.at/connect</string>
    <color name="orange">#f7941e</color>
    <color name="deepblue">#336b81</color>
    <color name="lightblue">#4699c2</color>
    <color name="white">#FFF</color>
    <string name="title_activity_map_activity_demo">MapActivityDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="ansprechsperson">Ansprechsperson:</string>
    <string name="adresse">Adresse:</string>
    <string name="telefon">Telefon:</string>
    <string name="internet">Internet:</string>
    <string name="email">E-Mail:</string>
    <string name="branche">Branche:</string>
    <string name="standorte">Standorte:</string>
    <string name="mitarbeiter">Mitarbeiter in Österreich:</string>
    <string name="einstellungen">Geplante Einstellungen 2015:</string>
    <string name="einsatzbereiche">Einsatzbereiche:</string>
    <string name="studiengaenge">Studiengänge:</string>
    <string name="zulassung">Zulassungsvorraussetzungen:</string>
    <string name="abschluss">Abschluss:</string>
    <string name="title_activity_aussteller_list">Aussteller</string>
    <string name="header_ansprechsperson">Ansprechsperson:</string>
    <string name="header_email">Email:</string>
    <string name="header_internet">Internet:</string>
    <string name="header_telefon">Telefon:</string>
    <string name="header_adresse">Adresse:</string>
    <string name="header_beschreibung">Beschreibung:</string>
    <string name="header_branche">Branche:</string>
    <string name="header_standorte">Standorte:</string>
    <string name="header_mitarbeiter">Mitarbeiter in Österreich:</string>
    <string name="header_einstellungen">Geplante Einstellungen:</string>
    <string name="header_einsatzbereiche">Einsatzbereiche:</string>
    <color name="black">#000</color>
    <string name="header_studiengaenge">Studiengänge:</string>
    <string name="header_zulassung">Zulassungsvorraussetzungen:</string>
    <string name="header_abschluss">Abschluss:</string>
    <string name="search_title">Suche</string>
    <string name="search_hint">Name </string>
    <string name="noFavorite">Sie haben noch keine Favoriten hinzugefügt.</string>
    <color name="backgroundProfile">#f8f8f8</color>
    <string name="title_impressum">Impressum</string>
    <string name="suche_description">Nach Ausstellername oder Standnummer suchen.</string>
    <string name="suche_hint">Uni Klagenfurt</string>
    <string name="suche_los">Los</string>
    <string name="impressum_header">Diese App wurde im Rahmen einer Bachelorarbeit im Studium Angewandte Informatik an der Alpen-Adria-Universität Klagenfurt entwickelt.</string>
    <string name="info">Information</string>
    <string name="entwickler_header">Entwickler</string>
    <string name="entwickler">Michael Wutti</string>
    <string name="technische_begleitung">Technische Begleitung</string>
    <string name="klaus_schoeffmann">Ass.Prof. Dipl.-Ing. Dr. Klaus Schöffmann</string>
    <string name="bonifaz_kaufmann">Dipl.Ing. Dr. Bonifaz Kaufmann</string>
    <string name="johanna_ortner">Mag.phil. Johanna Ortner</string>
    <string name="inhaltlicher_support">Inhaltlicher Support</string>
</resources>