<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"     
        android:layout_alignParentTop="true"   
        android:layout_marginTop="120dp" >
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/deepblue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/impressum_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/deepblue" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/technische_begleitung"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/deepblue"
            android:textStyle="bold"
            android:layout_below="@+id/textView1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/klaus_schoeffmann"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/deepblue" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="5dp"
            android:text="@string/bonifaz_kaufmann"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:textColor="@color/deepblue" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/inhaltlicher_support"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/deepblue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="5dp"
            android:text="@string/johanna_ortner"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:gravity="center"
            android:textColor="@color/deepblue"/>

    </RelativeLayout>

</RelativeLayout>