<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.aau.connectapp.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/connect_logo" />

    <TextView
        android:id="@+id/wwwconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/place"
        android:layout_below="@+id/place"
        android:layout_marginTop="20dp"
        android:text="@string/www_connect"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/deepblue"
        android:autoLink="web" />

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time"
        android:layout_below="@+id/time"
        android:layout_marginTop="15dp"
        android:text="@string/place_connect"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/deepblue" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date"
        android:layout_below="@+id/date"
        android:text="@string/time_connect"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/deepblue" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_connect"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/deepblue"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentLeft="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/connect_logoleiste"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/wwwconnect" />


</RelativeLayout>
